refactor: resolve high cognitive complexity and generic wildcard warnings